refactor: refatoring code